# Tetris

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: CMakeLists.txt  fSprite.txt  vSprite.txt
res/textures/: CMakeLists.txt
src/: main.cpp
src/1utilities/: FlexibleSizes.hpp
src/Game/: Game.cpp  Game.hpp  figures.hpp
src/Utilities/: Score.cpp  Score.hpp
src/game/: Game.cpp  Game.hpp
src/graphics/: IGraphics.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/objects/: FigureManager.cpp  FigureManager.hpp
src/objects/drawable/: Field.cpp  Field.hpp  Score.cpp  Score.hpp  Speed.cpp  Speed.hpp
